# Sinkhorn-algorithm

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  remarques
build-code-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  MOPSI  MOPSI.cbp  build.ninja  cmake_install.cmake  pi.csv  rules.ninja  simplex1.csv  simplex2.csv
code/: .RData  .Rhistory  .main.cpp.swp  CMakeLists.txt  Makefile  launch.sh  log.txt  main.cpp  matrice.cpp  matrice.h  out.txt  pi.cpp  pi.csv  pi.h  plot.gnu  simplex.cpp  simplex.h  simplex1.csv  simplex2.csv  utils.cpp  utils.h
code/lib/dlib/examples/: a.out
code/source/: main.cpp  matrice.cpp  matrice.h  pi.cpp  pi.h  simplex.cpp  simplex.h
code/src/: barycenter.cpp  main.cpp  pi.cpp  pi.h  simplex.cpp  simplex.h  utils.cpp
experimental/: barycentre.py
latex/: Subject.aux  Subject.tex
src/: barycenter.cpp  barycenter.h  main.cpp  simplex.cpp  simplex.h  utils.cpp  utils.h
